tests/error/ApiRequestError.js
/** Error class to throw in case of API response with result: fail */
export class ApiRequestError extends Error {
}
